--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,15 @@
 /*  your css code here. If applicable */
+*{
+	background-color:#cccccc;
+}
+
+.player_1{
+	border: 1px solid black;
+	border-radius:10px;
+	background-color:white;
+	text-decoraton:none;
+}
+.player_2{
+	background-color:white;
+	
+}
